# torch-models

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: export-models.yml
torch_models/: seisbench_phasenet.py
